--- a/lecturas2.html
+++ b/lecturas2.html
@@ -82,27 +82,97 @@
 </div>
 <section>
   <br><br><br>
-    <h2>Titulo lectura 2</h2>
+    <h2>ISO 27001</h2>
   <div id="apDiv20"><a href="https://informacion.unad.edu.co/correo" target="_blank"><img src="img/rss_aqu_32.png" class="menu" title="Correo Institucional" border="0" /></a></div>
                 <div style="height: 620px;width: 713px; overflow-y: auto; ">
                 <article>
                     <figure>
-                        <img src="img/diseno_web.jpg" alt="Diseno">
+                        <img src="img/iso.jpg" alt="Diseno" width="232">
+                        <h5><em>Imagen ISO 27001 - Recuperado de http://d0.awsstatic.com/logos/compliance/iso-logo.jpg</em></h5>
                   	</figure>
                     <p>
-                        Propósitos del curso:<br>
-                        • Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-                        • Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-                    • Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
-                    <p>Propósitos del curso:<br>
-• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.</p>
-                    <p>Propósitos del curso:<br>
-• Que el estudiante se fundamente teóricamente sobre las generalidades básicas del Diseño Web.<br>
-• Que el estudiante pueda utilizar de forma correcta los lenguajes HTML5 y CSS3 para aplicarlos en la solución de problemas de construcción de Sitios Web.<br>
-• Que el estudiante implemente servicios y sitios web a través de los sistemas gestores de contenidos CMS y LMS libres más usados en la actualidad.<br>
-                    </p>
+<strong> Introducción</strong> <br>
+ISO / IEC 27001 especifica formalmente un Sistema de Gestión de Seguridad de la Información (SGSI), un conjunto de actividades relativas a la gestión de la información. El SGSI es un marco de gestión global por medio del cual la organización identifica, analiza y aborda los riesgos de su información. El SGSI asegura que las medidas de seguridad estén alineados para seguir el ritmo de los cambios en las amenazas a la seguridad, vulnerabilidades e impactos de negocio, un aspecto importante en un campo tan dinámico, y una ventaja clave del enfoque de riesgo.<br><br>
+La norma abarca todos los tipos de organizaciones (por ejemplo, empresas comerciales, agencias gubernamentales, sin fines de lucro), todos los tamaños (desde microempresas hasta grandes multinacionales), y todas las industrias o los mercados (por ejemplo, minorista, banca, defensa, salud, educación y gobierno). <br><br>
+
+Los controles de seguridad de la información de la norma ISO / IEC 27002 se indican en el anexo A de la norma ISO / IEC 27001, más bien como un menú. Las organizaciones que adoptan la norma ISO / IEC 27001 son libres de elegir controles de seguridad de la información específicos, estos son aplicables a sus riesgos particulares de información, a partir de los que se enumeran en el menú, complementándolos con otras opciones  (a veces conocidos como conjuntos de control extendidas). Al igual que con la norma ISO / IEC 27002, la clave para la selección de los controles aplicables es llevar a cabo una evaluación exhaustiva de los riesgos de información de la organización, que es una parte vital del SGSI.<br>
+
+<figure>
+                        <img src="img/iso.gif" alt="Diseno" width="396">
+                        <h5><em>Imagen ISO 27001 - Recuperado de http://www.iso27000.es/doc_iso27000_all_archivos/image001.gif</em></h5>
+               	  </figure>
+<p>
+<strong>Historia</strong> <br>
+ISO / IEC 27001 se deriva de BS 7799 Parte 2, publicado por primera vez como tal en 1999.<br><br>
+
+BS 7799 Parte 2 ha sido revisada por BSI en 2002, que incorpora explícitamente el Plan-Do-Check-Act proceso cíclico.<br><br>
+
+BS 7799 parte 2 fue adoptado como la norma ISO / IEC 27001 en el año 2005, con varios cambios para reflejar sus nuevos guardianes.<br><br>
+
+El estándar fue revisado extensamente en 2013, alineándola con las otras normas de sistemas de gestión certificados ISO y dejando caer una referencia explícita a PDCA. Vea la página de línea de tiempo para más.<br><br>
+<strong> Estructura de la norma</strong><br>
+ISO / IEC 27001: 2013 tiene las siguientes secciones:<br>
+•	0 Introducción - el estándar utiliza un enfoque basado en procesos.<br>
+•	1 Ámbito de aplicación - que especifica los requisitos del SGSI genéricos adecuados para organizaciones de cualquier tipo, tamaño o naturaleza.<br>
+•	2 Referencias normativas - solamente la norma ISO / IEC 27000 se considera absolutamente esencial para los usuarios de '27001: las normas ISO27k restantes son opcionales.<br>
+•	3 Términos y definiciones - una breve glosario formalizado, para luego ser reemplazadas por la norma ISO / IEC 27000.<br>
+•	4 Contexto de la organización - la comprensión del contexto de la organización, las necesidades y expectativas de los «interesados», y la definición del alcance del SGSI. Sección 4.4 establece muy claramente que "La organización debe establecer, implementar, mantener y mejorar continuamente" un ISMS compatibles.<br>
+•	5 Liderazgo - alta dirección debe demostrar su liderazgo y compromiso con el SGSI, impone políticas y asignar información de seguridad funciones, responsabilidades y autoridades.<br>
+•	6 Planificación - describe el proceso para identificar, analizar y planificar para el tratamiento de riesgos de la información, y aclarar los objetivos de seguridad de la información.<br>
+•	7 Apoyo - adecuada, los recursos deben ser asignados competentes, mayor sensibilización, documentación preparados y controlados.<br>
+•	8 Funcionamiento - un poco más de detalle sobre evaluación y tratamiento de riesgos de la información, gestión de cambios, y la documentación de las cosas (en parte para que puedan ser verificados por los auditores de certificación).<br>
+•	9 Evaluación de Rendimiento  - controlar, medir, analizar y evaluar / auditoría / revisar los controles de seguridad de la información, procesos y sistema de gestión con el fin de hacer mejoras sistemáticas en su caso.<br>
+•	10 Mejoras - frente a los resultados de las auditorías y revisiones (por ejemplo, no conformidades y acciones correctivas), realizar mejoras continuas a los ISMS<br>
+ANEXO A los objetivos de control y controles de referencia - poco más en el hecho de que una lista de títulos de las secciones de control en la norma ISO / IEC 27002. El anexo es "normativa", lo que implica que se espera que las organizaciones certificadas a usarlo, pero son libres para desviarse o de complementarla con el fin de hacer frente a sus riesgos de información particulares.<br><br>
+Bibliografía - puntos lectores a cinco estándares relacionados, además de la parte 1 de las Directivas ISO / IEC, para más información. Además, la norma ISO / IEC 27000 se identifica en el cuerpo de la norma como una normativa (es decir, esencial) estándar y hay varias referencias a la norma ISO 31000 sobre gestión de riesgos.<br><br>
+Los requisitos aplicables a la titulación ISO / IEC 27001 son una especificación formal para un SGSI con dos propósitos distintos:<br><br>
+Presenta, en un nivel bastante alto, lo que una organización puede hacer con el fin de implementar un SGSI; Se puede (opcionalmente) ser utilizado como base para la evaluación formal de cumplimiento por parte de los auditores de certificación acreditados para certificar una organización.<br><br>
+La siguiente documentación obligatoria (o más bien "información documentada" en el lenguaje rebuscado curiosidad de la norma) se requiere de forma explícita para la certificación:<br><br>
+ISMS ámbito de aplicación (según el punto 4.3)<br><br>
+La política de seguridad de la información (cláusula 5.2)<br><br>
+Proceso de evaluación de riesgos de la información (cláusula 6.1.2)<br><br>
+Proceso de tratamiento de riesgos de la información (cláusula 6.1.3)<br><br>
+Los objetivos de seguridad de la información (cláusula 6.2)<br><br>
+La evidencia de la competencia de las personas que trabajan en seguridad de la información (cláusula 7.2)<br><br>
+Otros documentos relacionados con el ISMS considerada necesaria por la organización (7.5.1b cláusula)<br><br>
+Planificación y control operativo documentos (cláusula 8.1)<br><br>
+Los resultados de las evaluaciones de riesgo (cláusula 8.2)<br><br>
+Las decisiones con respecto al tratamiento del riesgo (cláusula 8.3)<br><br>
+La evidencia del seguimiento y medición de seguridad de la información (cláusula 9.1)<br><br>
+El programa de auditorías internas del SGSI y los resultados de las auditorías realizadas (cláusula 9.2)
+La evidencia de los principales exámenes de la gestión de los ISMS (cláusula 9.3)<br><br>
+La evidencia de las no conformidades identificadas y acciones correctivas derivadas (cláusula 10.1)<br><br>
+Varios otros: Anexo A, que es normativa, menciona pero no especifica completamente documentación adicional que incluye las reglas para el uso aceptable de los activos, la política de control de acceso, procedimientos operativos, acuerdos de confidencialidad o de no divulgación, los principios de ingeniería de sistemas seguros, la política de seguridad de la información para relaciones con los proveedores, los procedimientos de respuesta a incidentes de seguridad de información, leyes, reglamentos y obligaciones contractuales, además de los procedimientos de cumplimiento asociados y procedimientos de continuidad de seguridad de la información.<br><br>
+Auditores de certificación es casi seguro que comprobar que estos quince tipos de documentación son: (a) presente, y (b) adecuados a los objetivos. La norma no especifica con precisión qué forma la documentación debe tomar, pero la sección 7.5.2 habla de aspectos tales como los títulos, autores, formatos, medios de comunicación, revisión y aprobación, mientras que el control de documentos 7.5.3 preocupa, lo que implica una ISO bastante formal de 9000 enfoque al estilo, documentación electrónica (como páginas de intranet) son tan buenos como los documentos en papel, de hecho mejor en el sentido de que son más fáciles de controlar.<br><br>
+ISMS alcance, y la Declaración de aplicabilidad (SOA)<br><br>
+Mientras que la norma está destinada a impulsar la implementación de un SGSI en toda la empresa, lo que garantiza que todas las partes de la organización beneficiarse de hacer frente a sus riesgos para la información de una manera apropiada y sistemáticamente administrada, las organizaciones pueden alcance su ISMS tan amplia o restringida como se desee, el alcance es una decisión crucial para la alta dirección (cláusula 4.3). Un ámbito ISMS documentado es uno de los requisitos aplicables a la titulación.<br><br>
+
+A pesar de la "Declaración de aplicabilidad" (SOA) no se define explícitamente, se trata de un requisito obligatorio de la sección 6.1.3. Este término se refiere a un lugar común, la salida de las evaluaciones de riesgos de la información y, en particular, las decisiones en torno a tratar esos riesgos. La SOA puede, por ejemplo, tomar la forma de una matriz de identificación de los distintos tipos de riesgos para la información sobre un eje, y el tratamiento del riesgo opciones en el otro, mostrando cómo los riesgos deben ser tratados en el cuerpo, y tal vez quién es responsable de ellas . Por lo general, hace referencia a los controles pertinentes de la norma ISO / IEC 27002, pero la organización puede utilizar un marco diferente, como NIST SP800-55, el estándar de la ISF, BMIS y / o COBIT o un enfoque personalizado. Los objetivos de control y controles de seguridad de la información de la norma ISO / IEC 27002 se proporcionan a modo de lista en el Anexo A con el fin de evitar 'vistas a los controles necesarios ".<br><br>
+
+El alcance del SGSI y SOA son cruciales para que un tercero tiene la intención de adjuntar cualquier dependencia del certificado de cumplimiento de la norma ISO / IEC 27001 de una organización. Si la norma ISO / IEC 27001 de una organización sólo se observa "Acme Ltd. Departamento X", por ejemplo, el certificado asociado no dice absolutamente nada sobre el estado de seguridad de la información en "Acme Ltd. Departamento Y" o incluso "Acme Ltd." como una todo. Del mismo modo, si por alguna gestión razón decide aceptar los riesgos de malware sin la implementación de controles antivirus convencionales, los auditores de certificación pueden también impugnar una afirmación audaz, pero, siempre que los análisis y las decisiones asociadas eran sólidos, que por sí sola no sería justificación para negarse a certificar la organización desde los controles antivirus no son de hecho obligatoria.<br><br>
+
+La Certificación trae una serie de beneficios que van más allá del mero cumplimiento, de la misma manera que un certificado ISO 9000 de la serie dice más que "Somos una organización de calidad". Trae necesariamente cierto rigor y formalidad al proceso de aplicación (lo que implica mejoras en la seguridad de la información y todos los beneficios que aporta a través de la reducción del riesgo), e invariablemente requiere autorización de la dirección (que es una ventaja en términos de sensibilización de seguridad, por lo menos).<br><br>
+
+El certificado tiene el potencial de comercialización y demuestra que la organización toma muy en serio la gestión de seguridad de la información. Sin embargo, como se señaló anteriormente, el valor de la garantía del certificado depende del alcance del SGSI y SOA. De la misma manera que el cumplimiento de la certificación PCI-DSS no significa "Garantías para asegurar los datos de tarjetas de crédito y otra información personal", con certificación ISO / IEC 27001  es un signo positivo, pero no es una garantía de hierro fundido sobre seguridad de la información de una organización. Se dice que "tenemos un SGSI que cumplen en su lugar", no "Estamos seguros". Esa es una distinción importante.<br><br>
+
+<strong>Estado de la Norma</strong><br>
+ISO / IEC 27001 fue completamente reescrito y re-emitida en septiembre de 2013. Esto era mucho más que simplemente modificando el contenido de la edición de 2005 ya la norma ISO / IEC JTC 1 insistido en cambios sustanciales para alinear esta norma con las normas de otros sistemas de gestión que cubren la garantía de calidad, protección del medio ambiente, etc. La idea es que los gerentes que están familiarizados con cualquiera de los sistemas de gestión ISO van a entender los principios básicos de un SGSI. Conceptos tales como la certificación, la política, la no conformidad, el control de documentos, auditorías internas y revisiones por la dirección son comunes a todas las normas de sistemas de gestión, y de hecho los procesos pueden, en gran medida, ser normalizados dentro de la organización.<br><br>
+Una corrección de errores técnico publicado en octubre de 2014 aclaró que la información es, después de todo, un activo.<br><br>
+Una corrección de errores técnico posterior se publicó en diciembre de 2015, aclarando que las organizaciones son requeridos formalmente para identificar el estado de aplicación de sus controles de seguridad de la información en la SOA.<br><br>
+La actualización de estado julio Un tercer documento de corrección técnica propuesta parece tener saltó el tiburón: SC27 se resiste a la tentación de continuar modificando la norma publicada innecesariamente con los cambios que deberían haber sido propuestos cuando estaba en el proyecto, y puede no haber sido aceptado de todos modos.<br><br><br>
+
+
+<em>Bibliografía<br><br>
+
+Seguridad informática. GOBIERNO DE ESPAÑA. Recuperado el 13 de octubre de 2016 de: http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/normas_iso_sobre_gestin_de_seguridad_de_la_informacin.html<br><br>
+
+
+Destacados ISO 27000. ISO2700.ES. Recuperado el 13 de octubre de 2016 de: http://www.iso27000.es/iso27000.html<br><br>
+
+Familia de las normas ISO/IEC 27000. Universidad Nacional Abierta y a Distancia UNAD. Recuperado el 13 de octubre de 2016 de: http://datateca.unad.edu.co/contenidos/233003/modulo/modulo-233003-online/22__leccin_7_familia_de_las_normas_isoiec_27000.html<br><br>
+
+Fundamentos de Seguridad Informática. Universidad Nacional de México. Recuperado el 13 de octubre de 2016 de : http://redyseguridad.fi-p.unam.mx/proyectos/seguridad/ISO27.php
+</em> </p></p>
       			</article></div>
     </section>
     <aside> 
