--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
           proceso de análisis, evaluación y gestión de riesgos, propuestas generales e implementación de
           soluciones de acuerdo al estándar y metodología aplicados.<br>
 . El estudiante respeta los valores éticos y de seguridad en los escenarios donde se desempeña.</p>
-        <p><strong>Estructura  del curso:</strong></p>
+        <p><strong>Estructura  del curso:</strong></p><center>
         <img src="img/grafico1.jpg" width="636" height="385">
-        <p><br>
+        <p></center><br>
         </p>
       </article></div>
     </section>
