--- a/lecturas.html
+++ b/lecturas.html
@@ -112,14 +112,14 @@ Este tipo de virus también tiene la capacidad de engañar al sistema operativo.
 <strong>No ejecute archivos de dudoso: </strong>Evite ejecutar archivos de origen dudoso, la mayoría de las infecciones provocadas por virus se deben a la ejecución de archivos por parte del usuario. Por ejemplo cuando se reciben archivos, que muestran fotos o videos de sitios o personas a los cuales no conocemos, muchas veces recibidas mediante correo electrónico ya sea como archivos adjuntos o en forma de enlaces a sitios web. <br><br>
 <strong>Utilice contraseñas:</strong> Ponga una clave de acceso a su computadora para que sólo usted pueda acceder a ella. <br><br>
 <strong>Anti-virus:</strong> Tenga siempre instalado un anti-virus en su computadora, como medida general analice todos los archivos que va a ejecutar. Si detecta algún virus elimine el archivo. Existen antivirus en el mercado que permiten detectar cualquier virus en su computadora y eliminarlos, entre los más conocidos tenemos Mcafee. Nortón, Panda, y el gratuito AVG Free. <br><br>
-<strong>Actualice periódicamente su anti-virus:</strong> Un anti-virus que no está actualizado puede ser completamente inútil. Todos los anti-virus existentes en el mercado permanecen residentes en la computadora para controlar todas las operaciones de ejecución y transferencia de ficheros analizando cada fichero para determinar si tiene virus, mientras el usuario realiza otras tareas. </p>
+<strong>Actualice periódicamente su anti-virus:</strong> Un anti-virus que no está actualizado puede ser completamente inútil. Todos los anti-virus existentes en el mercado permanecen residentes en la computadora para controlar todas las operaciones de ejecución y transferencia de ficheros analizando cada fichero para determinar si tiene virus, mientras el usuario realiza otras tareas. </p><center>
                     <img src="img/marcas.jpg" alt="Diseno">
                         <h5><em>Antivirus - Recuperado de https://tiadvancedrecomen.wordpress.com/solucion-a-los-virus-informaticos/</em></h5>
   </figure>
    <h5><em>Referencia Bibliográfica<br>
 Ismael Ángel Romero. (2012). 90006 Herramientas Informáticas [PDF File]. Bogotá. Recuperado de http://tutorvcastro.weebly.com/uploads/8/7/5/4/8754038/mdulo_90006_herramientas_informticas.pdf
 
-</em></h5>
+</em></h5></center>
       			</article></div>
                  <figure>
     
